# github-to-gitea

./: .gitignore  AGENTS.md  README.md  config.ini.example  pyproject.toml  requirements.txt
gitea_mirror/: __init__.py  __main__.py  cf_gitea.py  cli.py  config.py  mirror.py
scripts/: clone_github_stars.py  clone_own_repos.py  interactive.py  scrape_organization.py  scrape_organization_cf.py
scripts/core/: github_to_gitea.py  github_to_gitea_cf.py
scripts/core/cf_ready/: cf_gitea.py
