[project]
name = "gitea-mirror"
version = "0.2.0"
description = "Mirror GitHub repositories to a Gitea instance"
requires-python = ">=3.10"
dependencies = [
    "prettytable>=2.4",
    "py-gitea",
    "PyGithub>=1.55",
]

[project.scripts]
gitea-mirror = "gitea_mirror.cli:main"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = []

[tool.ruff.format]
quote-style = "single"
